--- a/public/stylesheet-min.css
+++ b/public/stylesheet-min.css
@@ -77,6 +77,10 @@
     width: 100%;
     margin-top: 30px;
   }
+   .active-filter {
+    background-color: #287A77!important;
+    color: white !important;
+  }
 
   }
 @media only screen and (max-width: 641px){
