--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -6,6 +6,11 @@
      
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .poppins-thin {
   font-family: "Poppins", sans-serif;
   font-weight: 100;
