--- a/public/stylesheet-min.css
+++ b/public/stylesheet-min.css
@@ -84,6 +84,12 @@
 
   }
 @media only screen and (max-width: 641px){
+  .custom-container{
+    width: 90%;
+  }
+  .custom-container p{
+    font-size: 14px;
+  }
     .addres-content{
         flex-direction: column;
     }
