--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -137,7 +137,7 @@ html, body {
 }
 
 .hero-section {
-  background: url('/assets/image/12.jpg') center center / cover no-repeat;
+  background: url('/assets/image/23.jpg') center center / cover no-repeat;
   background-color: rgba(0, 0, 0, 0.5); /* Efek gelap di background */
   height: 100vh;
   display: flex;
@@ -468,10 +468,15 @@ hr{
       cursor: pointer;
     }
     .active-filter {
-    background-color: #287A77 !important; /* Pakai !important untuk override bootstrap */
+    background-color: #287A77 !important; 
     color: white !important;
     border-color: #287A77 !important;
 }
     .portfolio-item {
       display: none;
+      
+    }
+
+    .package-box ul{
+      list-style: none;
     }
